# GEPA-CATC

./: README.md  dataset_creator.py  optimized_program.json  plans_dag_loss.json  plans_qop_seq_run.json  pyproject.toml
catp-llm/: README.md  requirements.txt  run_catpllm.py
catp-llm/dataset/: test_task_samples.json
catp-llm/dataset/14/outputs/: labels.txt
catp-llm/dataset/217/outputs/: label-English.txt
catp-llm/dataset/223/outputs/: label-German.txt
catp-llm/dataset/79/outputs/: labels.txt
catp-llm/src/: config.py  types.py
catp-llm/src/catpllm/model/: __init__.py  token_encoder.py  tokens.py
catp-llm/src/catpllm/pipeline/: train.py
catp-llm/src/catpllm/utils/: cost_utils.py
catp-llm/src/metrics/: runtime_cost.py
catp-llm/src/plan/: plan_graph.py
catp-llm/src/tools/: tool.py
catp_base/: test_opencatp.py  test_samples.json
catp_base/dataset/: task_descriptions.txt
catp_base/dataset/205/outputs/: caption-German.txt
catp_base/src/: checkpoint.py  config.py  data_loader.py  utils.py
catp_base/src/metrics/: __init__.py  evaluator.py
catp_base/src/plan/: plan.py
catp_base/src/tools/: __init__.py  grouped_tools.py  tool.py  tool_manager.py
catp_gepa/: config.json  config.py  dataset.py  main.py  metric.py  modules.py  run_state.py
gepa_data/: gepa_dataset.json
logs/: calibrate.ckpt.json
non_seq_data/: valid_plans_all.json  valid_plans_best.json
results_from_pkls/: valid_plans_all.json  valid_plans_best.json
scripts/: calibrate_hardware_from_pkl.py  dataset_creator_execute.py  estimate_qop_bounds_from_pkl.py  run_post_eval_executor.py  run_state_plan_extractor.py
seq_data/: valid_plans_all.json  valid_plans_best.json
(+23 files in other folders)
